--- a/projects/layout/src/lib/Components/cards/card/card.component.html
+++ b/projects/layout/src/lib/Components/cards/card/card.component.html
@@ -6,13 +6,15 @@
     >
         <div class="block-4 text-center border">
             <figure class="block-4-image">
-                <a href="shop-single.html"
+                <a (click)="clickCard(product.categoryId, product.productId)"
                     ><img src="{{ product.imageUrl }}" alt="Image placeholder" class="img-fluid"
                 /></a>
             </figure>
             <div class="block-4-text p-4">
                 <h3>
-                    <a href="shop-single.html">{{ product.name }}</a>
+                    <a (click)="clickCard(product.categoryId, product.productId)">{{
+                        product.name
+                    }}</a>
                 </h3>
                 <p class="mb-0">{{ product.quantityInStock }}</p>
                 <p class="text-primary font-weight-bold">{{ product.unitPrice }} TND</p>
