--- a/projects/layout/src/lib/Components/product-info/default/default-product-info/default-product-info.component.html
+++ b/projects/layout/src/lib/Components/product-info/default/default-product-info/default-product-info.component.html
@@ -27,7 +27,6 @@
                         <div class="overlay">
                             <div class="likeCountImg">
                                 <svg
-                                    *ngIf="like"
                                     class="bi bi-heart-fill"
                                     width="1.5em"
                                     height="1.5em"
@@ -157,7 +156,81 @@
                             <a href="cart.html" class="buy-now btn btn-sm btn-color-product"
                                 >Add To Cart</a
                             >
+                            <svg
+                                class="bi bi-chat float-right"
+                                width="1.5em"
+                                height="1.5em"
+                                (click)="onComment()"
+                                viewBox="0 0 16 16"
+                                fill="currentColor"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    fill-rule="evenodd"
+                                    d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"
+                                />
+                            </svg>
                         </p>
+                        <div class="detailBox" *ngIf="comment">
+                            <div class="titleBox">
+                                <label>Comment Box</label>
+                                <button type="button" class="close" aria-hidden="true">
+                                    &times;
+                                </button>
+                            </div>
+                            <div class="commentBox">
+                                <p class="taskDescription">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting
+                                    industry.
+                                </p>
+                            </div>
+                            <div class="actionBox">
+                                <ul class="commentList">
+                                    <li>
+                                        <div class="commenterImage">
+                                            <img src="http://lorempixel.com/50/50/people/6" />
+                                        </div>
+                                        <div class="commentText">
+                                            <p class="">Hello this is a test comment.</p>
+                                            <span class="date sub-text">on March 5th, 2014</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="commenterImage">
+                                            <img src="http://lorempixel.com/50/50/people/7" />
+                                        </div>
+                                        <div class="commentText">
+                                            <p class="">
+                                                Hello this is a test comment and this comment is
+                                                particularly very long and it goes on and on and on.
+                                            </p>
+                                            <span class="date sub-text">on March 5th, 2014</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="commenterImage">
+                                            <img src="http://lorempixel.com/50/50/people/9" />
+                                        </div>
+                                        <div class="commentText">
+                                            <p class="">Hello this is a test comment.</p>
+                                            <span class="date sub-text">on March 5th, 2014</span>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <form class="form-inline" role="form">
+                                    <div class="form-group">
+                                        <input
+                                            class="form-control"
+                                            type="text"
+                                            placeholder="Your comments"
+                                        />
+                                    </div>
+                                    <div class="form-group">
+                                        <button class="btn btn-default">Add</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
