refactor: refactoring code

--- a/projects/layout/src/lib/Components/product-info/default/default-product-info/default-product-info.component.html
+++ b/projects/layout/src/lib/Components/product-info/default/default-product-info/default-product-info.component.html
@@ -153,9 +153,12 @@
                             </div>
                         </div>
                         <p>
-                            <a href="cart.html" class="buy-now btn btn-sm btn-color-product"
-                                >Add To Cart</a
+                            <button
+                                (click)="AddToCart()"
+                                class="buy-now btn btn-sm btn-color-product"
                             >
+                                Add To Cart
+                            </button>
                             <svg
                                 class="bi bi-chat float-right"
                                 width="1.5em"
