refactor: refactoring code

--- a/projects/layout/src/lib/Components/header/default/default-header.component.html
+++ b/projects/layout/src/lib/Components/header/default/default-header.component.html
@@ -51,7 +51,7 @@
                                 ></a>
                             </li>
                             <li>
-                                <a href="#" class="site-cart">
+                                <a routerLink="/store/shop/cart" class="site-cart">
                                     <span class="icon"
                                         ><svg
                                             class="bi bi-cart3"
