--- a/projects/layout/src/lib/Components/product-info/default/default-product-info/default-product-info.component.html
+++ b/projects/layout/src/lib/Components/product-info/default/default-product-info/default-product-info.component.html
@@ -47,42 +47,10 @@
                 <div class="col-md-4">
                     <div class="sticky-biki">
                         <div class="row">
-                            <div class="col-md-10">
+                            <div class="col-md-12">
                                 <h2 class="float-left">
                                     {{ product.name }}
                                 </h2>
-                            </div>
-                            <div class="col-md-2">
-                                <svg
-                                    class="bi bi-heart float-left"
-                                    *ngIf="!like"
-                                    width="1.5em"
-                                    (click)="onLike()"
-                                    height="1.5em"
-                                    viewBox="0 0 16 16"
-                                    fill="currentColor"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        fill-rule="evenodd"
-                                        d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"
-                                    />
-                                </svg>
-                                <svg
-                                    *ngIf="like"
-                                    class="bi bi-heart-fill"
-                                    width="1.5em"
-                                    (click)="onLike()"
-                                    height="1.5em"
-                                    viewBox="0 0 16 16"
-                                    fill="currentColor"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        fill-rule="evenodd"
-                                        d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
-                                    />
-                                </svg>
                             </div>
                         </div>
                         <div class="row">
@@ -159,81 +127,9 @@
                             >
                                 Add To Cart
                             </button>
-                            <svg
-                                class="bi bi-chat float-right"
-                                width="1.5em"
-                                height="1.5em"
-                                (click)="onComment()"
-                                viewBox="0 0 16 16"
-                                fill="currentColor"
-                                xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                    fill-rule="evenodd"
-                                    d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"
-                                />
-                            </svg>
+                            <lib-instagram></lib-instagram>
+                            <span style="color: #fff;">|</span>
                         </p>
-                        <div class="detailBox" *ngIf="comment">
-                            <div class="titleBox">
-                                <label>Comment Box</label>
-                                <button type="button" class="close" aria-hidden="true">
-                                    &times;
-                                </button>
-                            </div>
-                            <div class="commentBox">
-                                <p class="taskDescription">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting
-                                    industry.
-                                </p>
-                            </div>
-                            <div class="actionBox">
-                                <ul class="commentList">
-                                    <li>
-                                        <div class="commenterImage">
-                                            <img src="http://lorempixel.com/50/50/people/6" />
-                                        </div>
-                                        <div class="commentText">
-                                            <p class="">Hello this is a test comment.</p>
-                                            <span class="date sub-text">on March 5th, 2014</span>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="commenterImage">
-                                            <img src="http://lorempixel.com/50/50/people/7" />
-                                        </div>
-                                        <div class="commentText">
-                                            <p class="">
-                                                Hello this is a test comment and this comment is
-                                                particularly very long and it goes on and on and on.
-                                            </p>
-                                            <span class="date sub-text">on March 5th, 2014</span>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="commenterImage">
-                                            <img src="http://lorempixel.com/50/50/people/9" />
-                                        </div>
-                                        <div class="commentText">
-                                            <p class="">Hello this is a test comment.</p>
-                                            <span class="date sub-text">on March 5th, 2014</span>
-                                        </div>
-                                    </li>
-                                </ul>
-                                <form class="form-inline" role="form">
-                                    <div class="form-group">
-                                        <input
-                                            class="form-control"
-                                            type="text"
-                                            placeholder="Your comments"
-                                        />
-                                    </div>
-                                    <div class="form-group">
-                                        <button class="btn btn-default">Add</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
