--- a/projects/layout/src/lib/Components/footer/default/default-footer/default-footer.component.html
+++ b/projects/layout/src/lib/Components/footer/default/default-footer/default-footer.component.html
@@ -85,7 +85,7 @@
                 <p>
                     Copyright &copy; All rights reserved | E-commerce powered
                     <i class="icon-heart" aria-hidden="true"></i> by
-                    <a href="#" target="_blank" class="text-primary">Shoppable</a>
+                    <a href="#" target="_blank" class="text-primary-footer">Shoppable</a>
                 </p>
             </div>
         </div>
