--- a/projects/layout/src/lib/Components/product-info/default/default-product-info/default-product-info.component.html
+++ b/projects/layout/src/lib/Components/product-info/default/default-product-info/default-product-info.component.html
@@ -127,7 +127,7 @@
                             >
                                 Add To Cart
                             </button>
-                            <lib-instagram></lib-instagram>
+                            <lib-instagram [productId]="productId"></lib-instagram>
                             <span style="color: #fff;">|</span>
                         </p>
                     </div>
