--- a/projects/layout/src/lib/Components/side-bar/default-side-bar/default-side-bar.component.html
+++ b/projects/layout/src/lib/Components/side-bar/default-side-bar/default-side-bar.component.html
@@ -2,7 +2,6 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a href="index.html">Home</a> <span class="mx-2 mb-0">/</span>
                 <strong class="text-black">Shop</strong>
             </div>
         </div>
@@ -123,7 +122,7 @@
                         ><span class="text-black ml-auto">{{ maxSlider.value }} TND</span>
                     </div>
 
-                    <div class="mb-4">
+                    <!-- <div class="mb-4">
                         <h3 class="mb-3 h6 text-uppercase text-black d-block">
                             Size
                         </h3>
@@ -165,65 +164,7 @@
                             ></span>
                             <span class="text-black">Purple (1,075)</span>
                         </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="site-section site-blocks-2">
-                    <div class="row justify-content-center text-center mb-5">
-                        <div class="col-md-7 site-section-heading pt-4">
-                            <h2>Categories</h2>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div
-                            class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0"
-                            data-aos="fade"
-                            data-aos-delay=""
-                        >
-                            <a class="block-2-item" href="#">
-                                <figure class="image">
-                                    <img src="images/women.jpg" alt="" class="img-fluid" />
-                                </figure>
-                                <div class="text">
-                                    <span class="text-uppercase">Collections</span>
-                                    <h3>Women</h3>
-                                </div>
-                            </a>
-                        </div>
-                        <div
-                            class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0"
-                            data-aos="fade"
-                            data-aos-delay="100"
-                        >
-                            <a class="block-2-item" href="#">
-                                <figure class="image">
-                                    <img src="images/children.jpg" alt="" class="img-fluid" />
-                                </figure>
-                                <div class="text">
-                                    <span class="text-uppercase">Collections</span>
-                                    <h3>Children</h3>
-                                </div>
-                            </a>
-                        </div>
-                        <div
-                            class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0"
-                            data-aos="fade"
-                            data-aos-delay="200"
-                        >
-                            <a class="block-2-item" href="#">
-                                <figure class="image">
-                                    <img src="images/men.jpg" alt="" class="img-fluid" />
-                                </figure>
-                                <div class="text">
-                                    <span class="text-uppercase">Collections</span>
-                                    <h3>Men</h3>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
