--- a/projects/layout/src/lib/Container/cart/default/default-cart/default-cart.component.html
+++ b/projects/layout/src/lib/Container/cart/default/default-cart/default-cart.component.html
@@ -91,10 +91,18 @@
             <div class="col-md-6">
                 <div class="row mb-5">
                     <div class="col-md-6 mb-3 mb-md-0">
-                        <button class="btn btn-primary btn-sm btn-block">Update Cart</button>
+                        <button
+                            routerLink="/store/shop/cart"
+                            class="btn btn-primary btn-sm btn-block"
+                        >
+                            Update Cart
+                        </button>
                     </div>
                     <div class="col-md-6">
-                        <button class="btn btn-outline-primary btn-sm btn-block">
+                        <button
+                            routerLink="/store/shop"
+                            class="btn btn-outline-primary btn-sm btn-block"
+                        >
                             Continue Shopping
                         </button>
                     </div>
