--- a/projects/layout/src/lib/Container/order-sucess/default/default-order/default-order.component.scss
+++ b/projects/layout/src/lib/Container/order-sucess/default/default-order/default-order.component.scss
@@ -19,6 +19,15 @@
     background-color: #555555;
     border-color: #555555;
 }
+.btn-outline-primary {
+    color: #222;
+    border-color: #222;
+}
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: #555555 !important;
+    border-color: #555555;
+}
 a {
     color: #7971ea;
 }
