--- a/projects/layout/src/lib/Components/user-interaction/instagram/instagram.component.scss
+++ b/projects/layout/src/lib/Components/user-interaction/instagram/instagram.component.scss
@@ -1,3 +1,13 @@
+.showMore {
+    text-align: center;
+    cursor: pointer;
+    font-weight: 600;
+}
+.showMore:hover {
+    color: #555;
+    font-weight: 600;
+}
+
 .margin-right-svg {
     margin-right: 5px;
 }
