--- a/projects/layout/src/lib/Components/user-interaction/instagram/instagram.component.scss
+++ b/projects/layout/src/lib/Components/user-interaction/instagram/instagram.component.scss
@@ -3,6 +3,25 @@
     cursor: pointer;
     font-weight: 600;
 }
+.btn-color-product {
+    color: #fff;
+    background: #222;
+    border: 1px solid #222;
+}
+.btn-color-product:hover {
+    color: #fff;
+    background: #555555;
+    border-color: #555555;
+}
+.btn-outline-primary {
+    color: #222;
+    border-color: #222;
+}
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: #555555 !important;
+    border-color: #555555;
+}
 .showMore:hover {
     color: #555;
     font-weight: 600;
