refactor: refactoring code

--- a/projects/layout/src/lib/Components/cards/card/card.component.html
+++ b/projects/layout/src/lib/Components/cards/card/card.component.html
@@ -4,22 +4,54 @@
         data-aos="fade-up"
         *ngFor="let product of products | slice: pageStart:pageEnd"
     >
-        <div class="block-4 text-center border">
-            <figure class="block-4-image">
-                <a (click)="clickCard(product.categoryId, product.productId)"
-                    ><img src="{{ product.imageUrl }}" alt="Image placeholder" class="img-fluid"
-                /></a>
-            </figure>
-            <div class="block-4-text p-4">
-                <h3>
-                    <a (click)="clickCard(product.categoryId, product.productId)"
-                        ><i>{{ product.name }}</i></a
-                    >
-                </h3>
-                <br />
-                <p class="text-primary font-weight-bold">
-                    <i>{{ product.unitPrice }} TND</i>
-                </p>
+        <div class="item" (click)="clickCard(product.categoryId, product.productId)">
+            <div class="block-4 text-center">
+                <figure class="block-4-image container-image">
+                    <img src="{{ product.imageUrl }}" alt="Image " class="img-fluid img-on-hover" />
+                    <div class="overlayMoreBox">
+                        <div class="likeCountImgBox">
+                            <svg
+                                class="bi bi-heart"
+                                width="1em"
+                                height="1em"
+                                viewBox="0 0 16 16"
+                                fill="currentColor"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    fill-rule="evenodd"
+                                    d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"
+                                />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="overlayBoxFill">
+                        <div class="likeCountImgBoxFill">
+                            <svg
+                                class="bi bi-heart-fill"
+                                width="1em"
+                                height="1em"
+                                viewBox="0 0 16 16"
+                                fill="currentColor"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    fill-rule="evenodd"
+                                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
+                                />
+                            </svg>
+                        </div>
+                    </div>
+                </figure>
+
+                <div class="moreProductsBox">
+                    <h3 style="margin-bottom: 0px;">
+                        <i>{{ product.name }}</i>
+                    </h3>
+                    <p>
+                        <i>{{ product.unitPrice }} <b> TND</b></i>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
