refactor: refactoring code

--- a/projects/layout/src/lib/Components/footer/default/default-footer/default-footer.component.html
+++ b/projects/layout/src/lib/Components/footer/default/default-footer/default-footer.component.html
@@ -4,46 +4,54 @@
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="footer-heading mb-4">Navigations</h3>
+                        <h3 class="footer-heading mb-4">
+                            {{ 'LAYOUT.DEFAULT_FOOTER.NAV' | translate }}
+                        </h3>
                     </div>
                     <div class="col-md-6 col-lg-6">
                         <ul class="list-unstyled">
-                            <li><a href="#">Sell online</a></li>
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Shopping cart</a></li>
+                            <li>
+                                <a>{{ 'LAYOUT.DEFAULT_FOOTER.SELL' | translate }}</a>
+                            </li>
+                            <li>
+                                <a>{{ 'LAYOUT.DEFAULT_FOOTER.FEATURE' | translate }}</a>
+                            </li>
+                            <li>
+                                <a>{{ 'LAYOUT.DEFAULT_FOOTER.CART' | translate }}</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-md-6 col-lg-6">
                         <ul class="list-unstyled">
-                            <li><a href="#">Contact us</a></li>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Follow us</a></li>
+                            <li>
+                                <a>{{ 'LAYOUT.DEFAULT_FOOTER.CONTACT' | translate }}</a>
+                            </li>
+                            <li>
+                                <a>{{ 'LAYOUT.DEFAULT_FOOTER.ABOUT' | translate }}</a>
+                            </li>
+                            <li>
+                                <a>{{ 'LAYOUT.DEFAULT_FOOTER.FOLLOW' | translate }}</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                 <div class="col-md-12">
-                    <h3 class="footer-heading mb-4">Social media</h3>
+                    <h3 class="footer-heading mb-4">
+                        {{ 'LAYOUT.DEFAULT_FOOTER.MEDIA' | translate }}
+                    </h3>
                     <div class="backGroud">
                         <div class="footer-social-links">
-                            <a href="#" title="Facebook" target="_blank"
-                                ><i class="fa fa-facebook"></i
-                            ></a>
+                            <a title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
 
-                            <a href="#" title="Twitter" target="_blank"
-                                ><i class="fa fa-twitter"></i
-                            ></a>
+                            <a title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
 
-                            <a href="#" title="Google+" target="_blank"
-                                ><i class="fa fa-google-plus"></i
-                            ></a>
+                            <a title="Google+" target="_blank"><i class="fa fa-google-plus"></i></a>
 
-                            <a href="#" title="LinkedIn+" target="_blank"
-                                ><i class="fa fa-linkedin"></i
-                            ></a>
+                            <a title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
 
-                            <a href="#" title="Instagrame" target="_blank"
+                            <a title="Instagrame" target="_blank"
                                 ><i class="fa fa-instagram"></i
                             ></a>
                         </div>
@@ -52,7 +60,9 @@
             </div>
             <div class="col-md-6 col-lg-4">
                 <div class="block-5 mb-5">
-                    <h3 class="footer-heading mb-4">Contact Info</h3>
+                    <h3 class="footer-heading mb-4">
+                        {{ 'LAYOUT.DEFAULT_FOOTER.INFO' | translate }}
+                    </h3>
                     <ul class="list-unstyled">
                         <li class="address">
                             203 Farhad Hasheh St. Maatmeur, Monastir, TUN
@@ -66,7 +76,9 @@
 
                 <div class="block-7">
                     <form action="#" method="post">
-                        <label for="email_subscribe" class="footer-heading">Subscribe</label>
+                        <label for="email_subscribe" class="footer-heading">{{
+                            'LAYOUT.DEFAULT_FOOTER.SUB' | translate
+                        }}</label>
                         <div class="form-group">
                             <input
                                 type="text"
@@ -85,7 +97,7 @@
                 <p>
                     Copyright &copy; All rights reserved | E-commerce powered
                     <i class="icon-heart" aria-hidden="true"></i> by
-                    <a href="#" target="_blank" class="text-primary-footer">Shoppable</a>
+                    <a target="_blank" class="text-primary-footer">Shoppable</a>
                 </p>
             </div>
         </div>
