--- a/projects/layout/src/lib/Container/cart/default/default-cart/default-cart.component.html
+++ b/projects/layout/src/lib/Container/cart/default/default-cart/default-cart.component.html
@@ -2,8 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a routerLink="/store/shop">Shop</a> <span class="mx-2 mb-0">/</span>
-                <strong class="text-black">Cart</strong>
+                <a routerLink="/store/shop"> {{ 'LAYOUT.DEFAULT_CART.SHOP' | translate }}</a>
+                <span class="mx-2 mb-0">/</span>
+                <strong class="text-black">{{ 'LAYOUT.DEFAULT_CART.CART' | translate }}</strong>
             </div>
         </div>
     </div>
@@ -17,12 +18,24 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <th class="product-thumbnail">Image</th>
-                                <th class="product-name">Product</th>
-                                <th class="product-price">Price</th>
-                                <th class="product-quantity">Quantity</th>
-                                <th class="product-total">Total</th>
-                                <th class="product-remove">Remove</th>
+                                <th class="product-thumbnail">
+                                    {{ 'LAYOUT.DEFAULT_CART.IMG' | translate }}
+                                </th>
+                                <th class="product-name">
+                                    {{ 'LAYOUT.DEFAULT_CART.PRODUCT' | translate }}
+                                </th>
+                                <th class="product-price">
+                                    {{ 'LAYOUT.DEFAULT_CART.PRICE' | translate }}
+                                </th>
+                                <th class="product-quantity">
+                                    {{ 'LAYOUT.DEFAULT_CART.QUANTITY' | translate }}
+                                </th>
+                                <th class="product-total">
+                                    {{ 'LAYOUT.DEFAULT_CART.TOTAL' | translate }}
+                                </th>
+                                <th class="product-remove">
+                                    {{ 'LAYOUT.DEFAULT_CART.REMOVE' | translate }}
+                                </th>
                             </tr>
                         </thead>
                         <tbody>
@@ -95,7 +108,7 @@
                             routerLink="/store/shop/cart"
                             class="btn btn-primary btn-sm btn-block"
                         >
-                            Update Cart
+                            {{ 'LAYOUT.DEFAULT_CART.UPDATE' | translate }}
                         </button>
                     </div>
                     <div class="col-md-6">
@@ -103,14 +116,16 @@
                             routerLink="/store/shop"
                             class="btn btn-outline-primary btn-sm btn-block"
                         >
-                            Continue Shopping
+                            {{ 'LAYOUT.DEFAULT_CART.CONTINUE' | translate }}
                         </button>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <label class="text-black h4" for="coupon">Coupon</label>
-                        <p>Enter your coupon code if you have one.</p>
+                        <label class="text-black h4" for="coupon">{{
+                            'LAYOUT.DEFAULT_CART.COUPON' | translate
+                        }}</label>
+                        <p>{{ 'LAYOUT.DEFAULT_CART.ENTER' | translate }}</p>
                     </div>
                     <div class="col-md-8 mb-3 mb-md-0">
                         <input
@@ -121,7 +136,9 @@
                         />
                     </div>
                     <div class="col-md-4">
-                        <button class="btn btn-primary btn-sm">Apply Coupon</button>
+                        <button class="btn btn-primary btn-sm">
+                            {{ 'LAYOUT.DEFAULT_CART.APPLY' | translate }}
+                        </button>
                     </div>
                 </div>
             </div>
@@ -130,12 +147,16 @@
                     <div class="col-md-7">
                         <div class="row">
                             <div class="col-md-12 text-right border-bottom mb-5">
-                                <h3 class="text-black h4 text-uppercase">Cart Totals</h3>
+                                <h3 class="text-black h4 text-uppercase">
+                                    {{ 'LAYOUT.DEFAULT_CART.CART_TOTAL' | translate }}
+                                </h3>
                             </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col-md-6">
-                                <span class="text-black">Order value</span>
+                                <span class="text-black">{{
+                                    'LAYOUT.DEFAULT_CART.ORDER' | translate
+                                }}</span>
                             </div>
                             <div class="col-md-6 text-right">
                                 <strong class="text-black">{{ SubTotal.toFixed(2) }} TND</strong>
@@ -143,7 +164,9 @@
                         </div>
                         <div class="row mb-3">
                             <div class="col-md-6">
-                                <span class="text-black">Delivery</span>
+                                <span class="text-black">{{
+                                    'LAYOUT.DEFAULT_CART.DELIVERY' | translate
+                                }}</span>
                             </div>
                             <div class="col-md-6 text-right">
                                 <strong class="text-black">{{ Delivery.toFixed(2) }} TND</strong>
@@ -151,7 +174,9 @@
                         </div>
                         <div class="row mb-5">
                             <div class="col-md-6">
-                                <span class="text-black">Total</span>
+                                <span class="text-black">{{
+                                    'LAYOUT.DEFAULT_CART.TOTAL' | translate
+                                }}</span>
                             </div>
                             <div class="col-md-6 text-right">
                                 <strong class="text-black"
@@ -166,7 +191,7 @@
                                     routerLink="/store/shop/thankyou"
                                     class="btn btn-primary btn-lg py-3 btn-block"
                                 >
-                                    Finish my order
+                                    {{ 'LAYOUT.DEFAULT_CART.FINISH' | translate }}
                                 </button>
                             </div>
                         </div>
