refactor: refactoring code

--- a/projects/layout/src/lib/Components/footer/default/default-footer/default-footer.component.html
+++ b/projects/layout/src/lib/Components/footer/default/default-footer/default-footer.component.html
@@ -86,7 +86,11 @@
                                 id="email_subscribe"
                                 placeholder="Email"
                             />
-                            <input type="submit" class="btn btn-sm btn-primary" value="Send" />
+                            <input
+                                type="submit"
+                                class="btn btn-sm btn-primary"
+                                value="{{ 'LAYOUT.DEFAULT_FOOTER.SEND' | translate }}"
+                            />
                         </div>
                     </form>
                 </div>
