--- a/projects/layout/src/lib/Components/header/default/default-header.component.html
+++ b/projects/layout/src/lib/Components/header/default/default-header.component.html
@@ -33,6 +33,14 @@
                                 ></a>
                             </li>
                             <li>
+                                <a (click)="onClick()" class="site-cart"
+                                    ><span class="icon"
+                                        ><i class="zmdi zmdi-translate glob"></i
+                                    ></span>
+                                    <span class="count">{{ lang }}</span></a
+                                >
+                            </li>
+                            <li>
                                 <a
                                     ><span class="icon">
                                         <svg
