--- a/projects/layout/src/lib/Components/product-info/default/default-product-info/default-product-info.component.html
+++ b/projects/layout/src/lib/Components/product-info/default/default-product-info/default-product-info.component.html
@@ -127,7 +127,7 @@
                                 (click)="AddToCart()"
                                 class="buy-now btn btn-sm btn-color-product"
                             >
-                                Add To Cart
+                                {{ 'LAYOUT.DEFAULT_PRODUCT_INFO.ADD' | translate }}
                             </button>
                             <lib-instagram [productId]="productId"></lib-instagram>
                             <span style="color: #fff;">|</span>
